# ia_git

./: README.md  pyproject.toml
src/: cli.py  settings.py
src/commands/: audit_between_commits.py  audit_now.py  commit_message.py
src/lib/: git_utils.py
src/lib/chains/git/: __init__.py  chain.py  prompts.py  tools.py
src/lib/llm/: azure.py
src/tests/: chain_test.py  git_test.py
